<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context=".CourseEditActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/courseEditLengthText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/courseEditNameText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courseEditHelpText" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/courseEditPrefText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/courseEditStartText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/courseEditNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/courseEditHeightText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/courseEditNameText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/courseLengthUnit_text"
        app:layout_constraintBaseline_toBaselineOf="@+id/courseEditLengthEdit"
        app:layout_constraintStart_toEndOf="@+id/courseEditLengthEdit" />

    <TextView
        android:id="@+id/courseEditNameText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/courseHeightUnit_text"
        app:layout_constraintBaseline_toBaselineOf="@+id/courseEditHeightEdit"
        app:layout_constraintStart_toEndOf="@+id/courseEditHeightEdit" />

    <EditText
        android:id="@+id/courseEditNameEdit"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:selectAllOnFocus="true"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/courseEditHeightEdit" />

    <EditText
        android:id="@+id/courseEditPrefEdit"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:selectAllOnFocus="true"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/courseEditHeightEdit" />

    <EditText
        android:id="@+id/courseEditStartEdit"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:selectAllOnFocus="true"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/courseEditHeightEdit" />

    <EditText
        android:id="@+id/courseEditHeightEdit"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="right"
        android:inputType="number"
        android:selectAllOnFocus="true"
        app:layout_constraintBaseline_toBaselineOf="@+id/courseEditNameText"
        app:layout_constraintStart_toEndOf="@+id/textView5" />

    <EditText
        android:id="@+id/courseEditLengthEdit"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="right"
        android:inputType="number"
        android:selectAllOnFocus="true"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/courseEditHeightEdit" />

    <Button
        android:id="@+id/courseEditSaveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/btn_default_small"
        android:text="@string/courseEditSaveBtn"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toStartOf="@+id/courseEditDeleteBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <Button
        android:id="@+id/courseEditDeleteBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_default_small"
        android:text="@string/courseEditDeleteBtn"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toStartOf="@+id/courseEditCancelBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/courseEditSaveBtn"
        app:layout_constraintTop_toTopOf="@+id/courseEditSaveBtn" />

    <Button
        android:id="@+id/courseEditCancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_default_small"
        android:text="@string/courseEditCancelBtn"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/courseEditDeleteBtn"
        app:layout_constraintTop_toTopOf="@+id/courseEditSaveBtn" />

    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courseEditHeightEdit" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="249dp"
        android:layout_height="345dp"
        android:layout_marginTop="8dp"
        android:scaleType="fitStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courseEditSaveBtn"
        app:srcCompat="@drawable/yamanobori_tozan_man" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="コース編集画面" />

    <TextView
        android:id="@+id/courseEditHelpText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/courseEditHelpText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2" />
</androidx.constraintlayout.widget.ConstraintLayout>