<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tireEditLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context=".TireEditActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tireEditToolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="タイヤ転がり抵抗データ編集" />

    <ScrollView
        android:id="@+id/AllScreenScroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tireEditToolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/contentLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/tireEditHeaderText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/tireEditHeader"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/rollingUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tireCRRUnit"
                app:layout_constraintBaseline_toBaselineOf="@+id/tireCRREdit"
                app:layout_constraintStart_toEndOf="@+id/tireCRREdit" />

            <TextView
                android:id="@+id/pressUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tirePressUnit"
                app:layout_constraintBaseline_toBaselineOf="@+id/tirePressEdit"
                app:layout_constraintStart_toEndOf="@+id/tireCRREdit" />

            <TextView
                android:id="@+id/makerLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/tireMakerText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tireEditHeaderText" />

            <TextView
                android:id="@+id/nameLabelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/tireNameLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/makerLabel" />

            <TextView
                android:id="@+id/crrLabelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/tireCRRText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tireRadioGroup" />

            <TextView
                android:id="@+id/pressLabelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/tirePressLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/crrLabelText" />

            <TextView
                android:id="@+id/typeLabelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/tireTypeLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameLabelText" />

            <RadioGroup
                android:id="@+id/tireRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toEndOf="@+id/crrLabelText"
                app:layout_constraintTop_toBottomOf="@+id/tireNameEdit">

                <RadioButton
                    android:id="@+id/tireTURadioBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tireTU" />

                <RadioButton
                    android:id="@+id/tireCLRadioBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tireCL" />

                <RadioButton
                    android:id="@+id/tireTLRadioBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tireTL" />
            </RadioGroup>

            <EditText
                android:id="@+id/tireMakerEdit"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:ems="10"
                android:inputType="text"
                android:selectAllOnFocus="true"
                app:layout_constraintBaseline_toBaselineOf="@+id/makerLabel"
                app:layout_constraintStart_toEndOf="@+id/crrLabelText" />

            <EditText
                android:id="@+id/tireNameEdit"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:ems="10"
                android:inputType="text"
                android:selectAllOnFocus="true"
                app:layout_constraintBaseline_toBaselineOf="@+id/nameLabelText"
                app:layout_constraintStart_toEndOf="@+id/crrLabelText" />

            <EditText
                android:id="@+id/tireCRREdit"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:ems="10"
                android:inputType="text"
                android:selectAllOnFocus="true"
                app:layout_constraintBaseline_toBaselineOf="@+id/crrLabelText"
                app:layout_constraintStart_toEndOf="@+id/crrLabelText" />

            <EditText
                android:id="@+id/tirePressEdit"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:ems="10"
                android:inputType="text"
                android:selectAllOnFocus="true"
                app:layout_constraintBaseline_toBaselineOf="@+id/pressLabelText"
                app:layout_constraintStart_toEndOf="@+id/crrLabelText" />

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <Button
                android:id="@+id/tireDeleteBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:background="@android:drawable/btn_default_small"
                android:text="削除"
                app:layout_constraintEnd_toStartOf="@+id/tireCancelBtn"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tireSaveBtn"
                app:layout_constraintTop_toBottomOf="@+id/divider3" />

            <Button
                android:id="@+id/tireSaveBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:background="@android:drawable/btn_default_small"
                android:text="保存"
                app:layout_constraintEnd_toStartOf="@+id/tireDeleteBtn"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider3" />

            <Button
                android:id="@+id/tireCancelBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@android:drawable/btn_default_small"
                android:text="キャンセル"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tireDeleteBtn"
                app:layout_constraintTop_toBottomOf="@+id/divider3" />

            <ImageView
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:adjustViewBounds="true"
                android:scaleType="fitStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tireDeleteBtn"
                app:srcCompat="@drawable/tire_icon" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tirePressHelp"
                app:layout_constraintStart_toStartOf="@+id/tirePressEdit"
                app:layout_constraintTop_toBottomOf="@+id/tirePressEdit" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>